Add courses/terms, focus rooms, friends & notifications, notes, avatars; make deployment-ready
- Renames Projects to Courses (grouped by Term); rebuilds Tasks around Kanban + list views
- Adds Focus Rooms: server-authoritative synced Pomodoro over STOMP, live chat, hand-raise,
  scheduling, friend invites, and rematch
- Adds a Friends system and real-time in-app Notifications over a second STOMP connection
- Adds Notes with server-side article text extraction (Jsoup)
- Adds profile editing with local-disk avatar upload
- Reworks Stats with circular per-course completion rings and a focus-hours trend
- Rebuilds the landing page with an animated, real-component-based product tour
- Makes backend config (DB, JWT, CORS, uploads dir) environment-variable driven with
  local-dev defaults, adds Spring Boot Actuator health check
- Fixes a NullPointerException in PaginationUtils when pagination params are omitted
- Adds Docker/Render/Netlify deployment config (render.yaml, netlify.toml) and rewrites
  the README with real app screenshots, tech stack, and a deployment guide

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>